fixed library by adding flex wrap

--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,9 @@ body{
 .bottomContainer{
     width: 100%;
     height: 86.2%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     border-style: solid;
     border-color: orange;
 }
@@ -59,6 +62,7 @@ body{
 
 .booksAdded{
     width: 25%;
+    height: 10%;
     display: flex;
     flex-direction: row;
     border-style:solid;
